...
    <string name="password_hint">Password</string>
    <string name="url_hint">website url</string>
    <string name="note_hint">Add your notes here</string>
    <string name="save_account_content_description">save account</string>

    <!--    Authentication Messages -->
    <string name="wrong_password_pattern">Invalid Password Pattern</string>
    <string name="auth_process_error">Error while processing Authentication</string>
    <string name="incorrect_password">Password Incorrect!</string>
    <string name="auth_success">Authenticated Successfully!</string>
    <string name="register_success">Registered Successfully!</string>
    <string name="re_enter_master_password_hint">Confirm Password</string>
    <string name="enter_master_password_hint">Enter Master Password</string>
    <string name="register_state_not_found">Unable to determine if you\'re registered or not!</string>
    <string name="password_not_match">Re-entered Password don\'t match with original one</string>

    <!--    Authentication screen -->
    <string name="register_heading_text_view">Register</string>
    <string name="login_heading_text_view">Login</string>

    <string name="register_button_text">Register</string>
...
